--- a/Simula/MainWindow.xaml
+++ b/Simula/MainWindow.xaml
@@ -206,11 +206,9 @@
                             <!-- Central Area -->
                         </Grid>
                     </DockPanel>
-                    <Menu HorizontalAlignment="Left" Height="24" Margin="67,0,0,0" VerticalAlignment="Center" Width="619" FontWeight="Bold">
+                    <Menu HorizontalAlignment="Left" Height="24" Margin="67,0,0,0" VerticalAlignment="Center" Width="645" FontWeight="Regular">
                         <Menu.Items>
-                            <Grid Width="20" Height="20" Margin="-5,-2,0,0">
-                                <Image Source="pack://siteoforigin:,,,/app.icon.ico"/>
-                            </Grid>
+                            <MenuItem Header="Simula" FontWeight="Bold"/>
                             <MenuItem Header=" 文件(_F) " Name="mi_0_file" Height="24">
                                 <MenuItem.Items>
                                     <MenuItem Header="新建项">
@@ -411,7 +409,7 @@
                         </StackPanel>
                     </DockPanel>
                 </Grid>
-                
+
                 <Grid >
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
@@ -571,9 +569,7 @@
                         </StackPanel>
                         <Menu Margin="2,0,0,0" Width="170" FontWeight="Bold">
                             <Menu.Items>
-                                <Grid Width="20" Height="20" Margin="-5,0,0,0">
-                                    <Image Source="pack://siteoforigin:,,,/app.icon.ico"/>
-                                </Grid>
+                                <MenuItem Header="Simula Installer" FontWeight="Bold"/>
                                 <MenuItem Header="安装程序(_I)" Margin="4,4,0,4">
                                     <MenuItem Header="检查更新 ..."/>
                                     <MenuItem Header="选择更新和更改的组件 ..."/>
