--- a/Simula/Pages/About.xaml
+++ b/Simula/Pages/About.xaml
@@ -1,10 +1,11 @@
-﻿<UserControl x:Class=" Simula.Pages.About"
+﻿<Window x:Class=" Simula.Pages.About"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Simula.Pages"
-             mc:Ignorable="d" FontFamily="Segoe UI, consolas, simsun" Width="494" Height="345">
+             Title="关于 Xornent Simula" WindowStartupLocation="CenterScreen"
+             mc:Ignorable="d" FontFamily="pingfang sc, consolas, simsun" Width="524" Height="399">
     <Grid>
         <StackPanel Orientation="Vertical">
             <Grid Height="20"/>
@@ -15,7 +16,7 @@
                     </Grid>
                     <Grid>
                         <StackPanel Orientation="Vertical" Margin="10,0,0,0">
-                            <Label Content=" Simula" FontWeight="Black" FontFamily="segoe ui, simsun" FontSize="30"/>
+                            <Label Content=" Simula" FontWeight="Light" FontSize="30"/>
                             <Label Content="版本 0.0.3" FontFamily="Consolas" Margin="10,-10,0,0" Foreground="Gray"/>
                         </StackPanel>
                     </Grid>
@@ -30,10 +31,10 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="1" 
                            Text="本软件处在初级的测试阶段，存在不可预知的漏洞和行为的异常，并且存在丢失用户数据的风险。因此，请不要将此版本用作生产用途，可以在 相应的 Github Repo Issues 中汇报已存在的问题。一切资料的损失由用户自行承担。" 
-                           TextWrapping="Wrap" LineHeight="16" Foreground="Gray"/>
+                           TextWrapping="Wrap" LineHeight="18" Foreground="Gray"/>
             </Grid>
             <Grid Height="20"/>
-            <ScrollViewer Height="150">
+            <ScrollViewer Height="150" TextOptions.TextFormattingMode="Display">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="0.15*"/>
@@ -61,16 +62,12 @@
                                        TextWrapping="Wrap" Foreground="Gray"/>
 
                                 <Grid Height="20"/>
-                                <Button Content="向 Xornent S.I. 汇报异常" Width="180" Height="20"/>
-                                <Grid Height="10"/>
-                                <Button Content="捐助 Project Simula" Width="180" Height="20"/>
-                                <Grid Height="10"/>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
                 </Grid>
             </ScrollViewer>
-            
+
         </StackPanel>
     </Grid>
-</UserControl>
+</Window>
