--- a/Simula.Editor/CodeCompletion/CompletionList.xaml
+++ b/Simula.Editor/CodeCompletion/CompletionList.xaml
@@ -2,7 +2,7 @@
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:cc="clr-namespace:Simula.Editor.CodeCompletion">
 	<Style TargetType="{x:Type ListBoxItem}" x:Key="CompletionListBoxItem">
-        <Setter Property="FontFamily" Value="Consolas, Simsun"/>
+        <Setter Property="FontFamily" Value="Cascadia Code,Consolas, Simsun"/>
         <Setter Property="FontSize" Value="13"/>
         <Setter Property="Template">
 			<Setter.Value>
@@ -21,9 +21,10 @@
 					-->
 					<ControlTemplate.Triggers>
 						<Trigger Property="IsSelected" Value="true">
-							<Setter Property="Background"
+                            <Setter Property="Background"
 							        Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
-							<Setter Property="Foreground"
+                            <Setter Property="FontWeight" Value="Black"/>
+                            <Setter Property="Foreground"
 							        Value="OrangeRed"/>
 						</Trigger>
 					</ControlTemplate.Triggers>
