--- a/Simula.Editor/CodeCompletion/CompletionList.xaml
+++ b/Simula.Editor/CodeCompletion/CompletionList.xaml
@@ -2,8 +2,8 @@
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 					xmlns:cc="clr-namespace:Simula.Editor.CodeCompletion">
 	<Style TargetType="{x:Type ListBoxItem}" x:Key="CompletionListBoxItem">
-        <Setter Property="FontFamily" Value="Cascadia Code,Consolas, Simsun"/>
-        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontFamily" Value="Consolas, Simsun"/>
+        <Setter Property="FontSize" Value="13.5"/>
         <Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type ListBoxItem}">
@@ -44,8 +44,7 @@
 							<DataTemplate>
 								<StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                     <Grid Width="4"/>
-                                    <TextBlock Width="16" Height="16" FontSize="14" VerticalAlignment="Center" TextAlignment="Center" FontFamily="Segoe MDL2 Assets" Text="{Binding Image}"/>
-                                    <!--<Image Source="{Binding Image}" Width="16" Height="16" Margin="0,0,2,0"/>-->
+                                    <Image Source="{Binding Image}" Width="16" Height="16" Margin="0,0,2,0"/>
                                     <Grid Width="4"/>
 									<ContentPresenter Content="{Binding Content}"/>
 								</StackPanel>
